--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Raleway&display=swap);@charset "UTF-8";
 
 /*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
 
