--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,10 @@
 
 // Bulma
 @import '~bulma/bulma';
+
+@import '~dropzone/dist/dropzone.css';
+
+.dropzone {
+	margin-bottom: 20px;
+	min-height: auto;
+}
